--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-data-grid": "^5.17.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
